--- a/AcmeProductManagement/packages.config
+++ b/AcmeProductManagement/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.UI.UI-Router" version="0.3.1" targetFramework="net452" />
   <package id="Angular-ApiMock" version="0.3.3" targetFramework="net452" />
   <package id="AngularJS.Core" version="1.5.9" targetFramework="net452" />
   <package id="AngularJS.Resource" version="1.5.9" targetFramework="net452" />
