--- a/AcmeProductManagement/AcmeProductManagement.csproj
+++ b/AcmeProductManagement/AcmeProductManagement.csproj
@@ -94,6 +94,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\products\productDetailCtrl.js" />
+    <Content Include="app\products\productDetailView.html" />
     <Content Include="app\products\productListView.html" />
     <Content Include="app\welcomeView.html" />
     <Content Include="common\services\comon.services.js" />
