--- a/AcmeProductManagement/AcmeProductManagement.csproj
+++ b/AcmeProductManagement/AcmeProductManagement.csproj
@@ -96,6 +96,11 @@
   <ItemGroup>
     <Content Include="app\products\productDetailCtrl.js" />
     <Content Include="app\products\productDetailView.html" />
+    <Content Include="app\products\productEditCtrl.js" />
+    <Content Include="app\products\productEditInfoView.html" />
+    <Content Include="app\products\productEditPriceView.html" />
+    <Content Include="app\products\productEditTagsView.html" />
+    <Content Include="app\products\productEditView.html" />
     <Content Include="app\products\productListView.html" />
     <Content Include="app\welcomeView.html" />
     <Content Include="common\services\comon.services.js" />
@@ -106,6 +111,11 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\toastr.css" />
+    <Content Include="Content\toastr.min.css" />
+    <Content Include="Content\ui-bootstrap-csp.css" />
+    <Content Include="css\app.css" />
+    <Content Include="css\toastr.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="images\logo.jpg" />
     <Content Include="packages.config" />
@@ -120,6 +130,14 @@
     <Content Include="Scripts\angular-route.min.js" />
     <Content Include="Scripts\angular-ui-router.js" />
     <Content Include="Scripts\angular-ui-router.min.js" />
+    <Content Include="Scripts\angular-ui\ui-bootstrap-tpls.js" />
+    <Content Include="Scripts\angular-ui\ui-bootstrap-tpls.min.js" />
+    <Content Include="Scripts\angular-ui\ui-bootstrap.js" />
+    <Content Include="Scripts\angular-ui\ui-bootstrap.min.js" />
+    <Content Include="Scripts\angular-ui\ui-utils-ieshiv.js" />
+    <Content Include="Scripts\angular-ui\ui-utils-ieshiv.min.js" />
+    <Content Include="Scripts\angular-ui\ui-utils.js" />
+    <Content Include="Scripts\angular-ui\ui-utils.min.js" />
     <Content Include="Scripts\angular.min.js.map" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -131,6 +149,8 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Scripts\angular-resource.min.js.map" />
     <Content Include="Scripts\angular-route.min.js.map" />
+    <Content Include="Content\toastr.scss" />
+    <Content Include="Content\toastr.less" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -151,6 +171,8 @@
     <Content Include="Scripts\angular-mocks.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
+    <Content Include="Scripts\toastr.js" />
+    <Content Include="Scripts\toastr.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -158,7 +180,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="app\prices\" />
-    <Folder Include="css\" />
     <Folder Include="js\" />
   </ItemGroup>
   <PropertyGroup>
