--- a/AcmeProductManagement/packages.config
+++ b/AcmeProductManagement/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.UI.Bootstrap" version="2.3.1" targetFramework="net452" />
   <package id="Angular.UI.UI-Router" version="0.3.1" targetFramework="net452" />
+  <package id="Angular.UI.Utils" version="0.2.3" targetFramework="net452" />
   <package id="Angular-ApiMock" version="0.3.3" targetFramework="net452" />
   <package id="AngularJS.Core" version="1.5.9" targetFramework="net452" />
   <package id="AngularJS.Resource" version="1.5.9" targetFramework="net452" />
@@ -16,4 +18,5 @@
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="toastr" version="2.1.1" targetFramework="net452" />
 </packages>
